force-app/main/default/objects/AI_Configuration__mdt/AI_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>AI Configuration</label>
    <pluralLabel>AI Configurations</pluralLabel>
    <description>Configuration settings for AI service integrations (Azure OpenAI, etc.)</description>
</CustomObject>