force-app/main/default/objects/AI_Configuration__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <description>API endpoint path (appended to Named Credential URL)</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>