force-app/main/default/objects/AI_Configuration__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <label>Max Tokens</label>
    <description>Maximum tokens in AI response. Recommended: 500 for classification</description>
    <required>true</required>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>500</defaultValue>
</CustomField>