force-app/main/default/objects/AI_Configuration__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <description>AI model temperature (0.0 = deterministic, 1.0 = creative). Recommended: 0.3 for classification</description>
    <required>true</required>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <defaultValue>0.30</defaultValue>
</CustomField>